--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
     -->
     <link href="https://fonts.googleapis.com/css?family=Roboto+Slab" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
-    <title>React App</title>
+    <title>Is it worth it?</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
