--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,7 @@
     -->
     <link href="https://fonts.googleapis.com/css?family=Roboto+Slab" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Mono" rel="stylesheet">
     <title>Is it worth it?</title>
   </head>
   <body>
