Updated meta tags to be more positive lol

--- a/public/index.html
+++ b/public/index.html
@@ -42,12 +42,12 @@
 
     <!-- Title -->
     <title>Is your college major worth it?</title>
-    <meta property="og:title" content="Is your major worthless">
-    <meta property="twitter:title" content="Is your major worthless">
-    <meta name="Description" content="Have you been wondering if your college major is worthless? Easily find out here." />
-    <meta name="og:description" content="Have you been wondering if your college major is worthless? Easily find out here.">
-    <meta name="twitter:description" content="Have you been wondering if your college major is worthless? Easily find out here.">
-    <meta name="keywords" content="college, major, debt, usa, university, education, useless, worthless, worthwhile, degree, dropout, happy, future">
+    <meta property="og:title" content="Is your major worthwhile?">
+    <meta property="twitter:title" content="Is your major worthwhile?">
+    <meta name="Description" content="Have you been wondering if your college major is worthwhile? Easily find out here." />
+    <meta name="og:description" content="Have you been wondering if your college major is worthwhile? Easily find out here.">
+    <meta name="twitter:description" content="Have you been wondering if your college major is worthwhile? Easily find out here.">
+    <meta name="keywords" content="college, major, debt, usa, university, education, worthwhile, degree, happy, future">
     <!-- Add og & twitter image as well as twitter card (obtain images) -->
 
 
