--- a/public/index.html
+++ b/public/index.html
@@ -40,15 +40,17 @@
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Roboto+Mono" rel="stylesheet">
 
-    <!-- Title -->
+    <!-- OG/Twitter/General info tags -->
     <title>Is your college major worth it?</title>
     <meta property="og:title" content="Is your major worthwhile?">
     <meta property="twitter:title" content="Is your major worthwhile?">
-    <meta name="Description" content="Have you been wondering if your college major is worthwhile? Easily find out here." />
+    <meta name="description" content="Have you been wondering if your college major is worthwhile? Easily find out here." />
     <meta name="og:description" content="Have you been wondering if your college major is worthwhile? Easily find out here.">
     <meta name="twitter:description" content="Have you been wondering if your college major is worthwhile? Easily find out here.">
     <meta name="keywords" content="college, major, debt, usa, university, education, worthwhile, degree, happy, future">
-    <!-- Add og & twitter image as well as twitter card (obtain images) -->
+    <meta name="og:image" content="./images/screenshot.png">
+    <meta name="twitter:image" content="./images.screenshot.png">
+    <meta name="twitter:card" content="./images.screenshot.png">
 
 
   </head>
