Updated title, tags, description

--- a/public/index.html
+++ b/public/index.html
@@ -41,13 +41,14 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto+Mono" rel="stylesheet">
 
     <!-- OG/Twitter/General info tags -->
-    <title>Is your college major worth it?</title>
+    <title>Is My College Major Worth It?</title>
     <meta property="og:title" content="Is your major worthwhile?">
     <meta property="twitter:title" content="Is your major worthwhile?">
-    <meta name="description" content="Have you been wondering if your college major is worthwhile? Easily find out here." />
-    <meta name="og:description" content="Have you been wondering if your college major is worthwhile? Easily find out here.">
-    <meta name="twitter:description" content="Have you been wondering if your college major is worthwhile? Easily find out here.">
-    <meta name="keywords" content="college, major, debt, usa, university, education, worthwhile, degree, happy, future">
+    <meta name="description" content="Have you been wondering if your college degree will be worth something? Find out here!" />
+    <meta name="og:description" content="Have you been wondering if your college degree will be worth something? Find out here!">
+    <meta name="twitter:description" content="Have you been wondering if your college degree will be worth something? Find out here!">
+    <meta name="keywords" content="should, college, major, debt, usa, university, education, worthwhile, degree, happy, 
+    future, student, money, america, graduate, success, time, majoring, worth, bachelors, masters, grad">
     <meta name="og:image" content="./images/screenshot.png">
     <meta name="twitter:image" content="./images.screenshot.png">
     <meta name="twitter:card" content="./images.screenshot.png">
